deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nothingdns
  namespace: default
  labels:
    app: nothingdns
spec:
  clusterIP: None
  selector:
    app: nothingdns
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 853
    targetPort: 853
  - name: metrics
    port: 9153
    targetPort: 9153
